--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -197,6 +197,32 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\arjona.jpg" />
+    <Content Include="Images\bruta.jpg" />
+    <Content Include="Images\chino.jpg" />
+    <Content Include="Images\destacado.png" />
+    <Content Include="Images\destacado2.png" />
+    <Content Include="Images\disco.jpg" />
+    <Content Include="Images\fiesta.jpg" />
+    <Content Include="Images\guerrasexos.jpg" />
+    <Content Include="Images\icons.png" />
+    <Content Include="Images\katyperry.jpg" />
+    <Content Include="Images\login.png" />
+    <Content Include="Images\naufragos.jpg" />
+    <Content Include="Images\newUser.jpg" />
+    <Content Include="Images\oz.jpg" />
+    <Content Include="Images\pepa.jpg" />
+    <Content Include="Images\perfil1.jpg" />
+    <Content Include="Images\piaf.jpg" />
+    <Content Include="Images\registrado.png" />
+    <Content Include="Images\search.png" />
+    <Content Include="Images\shoppig.jpg" />
+    <Content Include="Images\teadoro.jpg" />
+    <Content Include="Images\teleticket.gif" />
+    <Content Include="Images\teleticketmini.gif" />
+    <Content Include="Images\tomas.jpg" />
+    <Content Include="Images\ubo.jpg" />
+    <Content Include="Images\zonass.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="Models\Model1.edmx">
