--- a/WebApplication4/WebApplication4/Log4Net.config
+++ b/WebApplication4/WebApplication4/Log4Net.config
@@ -4,23 +4,25 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
-  <log4net debug="true">
-    <appender name="FileAppender" type="log4net.Appender.FileAppender,log4net">
-      <file value="C:\log.txt" />
-      <appendToFile value="true" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="INFO" />
-        <levelMax value="FATAL" />
-      </filter>
-    </appender>
+  <log4net>
     <root>
-      <level value="INFO" />
-      <appender-ref ref="FileAppender"/>
+      <level value="Debug"/>
+      <appender-ref ref="LogFileAppender"/>
     </root>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="F:\\Logs.txt"/>
+      <param name="AppendToFile" value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="3MB"/>
+      <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%date [%thread] %-5level %logger - %message%newline"/>
+      </layout>
+    </appender>
+    <logger name="CentralCMS">
+      <level value="DEBUG"/>
+    </logger>
   </log4net>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
