--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -321,6 +321,7 @@
     <Content Include="Views\Evento\Index.cshtml" />
     <Content Include="Views\Promocion\Index.cshtml" />
     <Content Include="Views\Promocion\_RegisterPartial.cshtml" />
+    <Content Include="Views\Promocion\_RegisterPartial2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
