--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Models\Regalo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RegaloModel.cs" />
     <Compile Include="Models\RegaloXCuenta.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
