--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -168,9 +168,11 @@
     <Compile Include="Controllers\CuentaUsuarioController.cs" />
     <Compile Include="Controllers\EventoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LocalController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PromocionController.cs" />
     <Compile Include="Controllers\RegaloController.cs" />
+    <Compile Include="Controllers\TipoDeCambioController.cs" />
     <Compile Include="Models\Banco.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -180,6 +182,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Local.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\LocalModel.cs" />
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -215,6 +221,7 @@
     <Compile Include="Models\TipoDeCambio.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\TipoDeCambioModel.cs" />
     <Compile Include="Models\TipoTarjeta.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -334,6 +341,8 @@
     <Content Include="Views\Promocion\_RegisterPartial.cshtml" />
     <Content Include="Views\Promocion\_RegisterPartial2.cshtml" />
     <Content Include="Views\Regalo\Index.cshtml" />
+    <Content Include="Views\TipoDeCambio\Index.cshtml" />
+    <Content Include="Views\Local\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
