--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -378,6 +378,7 @@
     <Content Include="Views\PuntoVenta\Edit.cshtml" />
     <Content Include="Views\Organizador\Edit.cshtml" />
     <Content Include="Views\Empleado\Edit.cshtml" />
+    <Content Include="Views\Evento\Prov.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
