--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -380,6 +380,8 @@
     <Content Include="Views\Empleado\Edit.cshtml" />
     <Content Include="Views\Evento\Prov.cshtml" />
     <Content Include="Views\Regalo\_Search.cshtml" />
+    <Content Include="Views\Local\_Search.cshtml" />
+    <Content Include="Views\Organizador\_Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
