--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -382,6 +382,7 @@
     <Content Include="Views\Regalo\_Search.cshtml" />
     <Content Include="Views\Local\_Search.cshtml" />
     <Content Include="Views\Organizador\_Search.cshtml" />
+    <Content Include="Views\PuntoVenta\_Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
