--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -408,6 +408,7 @@
     <Content Include="Views\CuentaUsuario\BuscaCliente.cshtml" />
     <Content Include="Views\CuentaUsuario\_Search1.cshtml" />
     <Content Include="Views\Categoria\Index.cshtml" />
+    <Content Include="Views\Evento\VerEvento.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
