--- a/WebApplication4/MvcPaging/MvcPaging.csproj
+++ b/WebApplication4/MvcPaging/MvcPaging.csproj
@@ -105,7 +105,6 @@
     <Compile Include="PagerOptionsBuilder.cs" />
     <Compile Include="PaginationModel.cs" />
     <Compile Include="PagingExtensions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteValueDictionaryExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -128,6 +127,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -137,5 +139,4 @@
   <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release'">
     <Copy SourceFiles="$(TargetPath)" DestinationFolder="..\..\nuget\lib\net40\" />
   </Target>
-
 </Project>
