--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ $RECYCLE.BIN/
 /WebApplication4/packages/iTextSharp.5.5.7/AGPL.txt
 /WebApplication4/packages/iTextSharp.5.5.7/iTextSharp.5.5.7.nupkg
 /WebApplication4/packages/iTextSharp.5.5.7/notice.txt
+/WebApplication4
