--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Models\Banco.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BloqueDeTIempoModel.cs" />
     <Compile Include="Models\Categoria.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -212,6 +213,7 @@
     <Compile Include="Models\C__MigrationHistory.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DatosGeneralesModel.cs" />
     <Compile Include="Models\Evento2Model.cs" />
     <Compile Include="Models\EventoModel.cs" />
     <Compile Include="Models\Eventos.cs">
@@ -220,9 +222,11 @@
     <Compile Include="Models\EventosPrueba.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ExtrasModel.cs" />
     <Compile Include="Models\Funcion.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\FuncionesModel.cs" />
     <Compile Include="Models\Local.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -278,6 +282,7 @@
     </Compile>
     <Compile Include="Models\RegistarEventoModel.cs" />
     <Compile Include="Models\RequireRequestValueAttribute.cs" />
+    <Compile Include="Models\TarifaModel.cs" />
     <Compile Include="Models\Tarjeta.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -463,6 +468,7 @@
     <Content Include="Views\Evento\Asientos.cshtml" />
     <Content Include="Views\Evento\BloquesTiempoVenta.cshtml" />
     <Content Include="Views\Evento\Funciones.cshtml" />
+    <Content Include="Views\Evento\FuncionRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
