no vuelvan a mandar los  .dll u otros, en si los q aparezcan en carpetas bin, debug, obj. ahora todos tendran conflictos al pushear (christian plox)

--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Controllers\EventoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LocalController.cs" />
+    <Compile Include="Controllers\MagicHelpers.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrganizadorController.cs" />
     <Compile Include="Controllers\PromocionController.cs" />
@@ -191,7 +192,11 @@
     <Compile Include="Controllers\RegaloController.cs" />
     <Compile Include="Controllers\ServicesController.cs" />
     <Compile Include="Controllers\TipoDeCambioController.cs" />
+    <Compile Include="Controllers\Validaciones.cs" />
     <Compile Include="Controllers\VentasController.cs" />
+    <Compile Include="Models\Asientos.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\AspNetRoles.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -270,6 +275,9 @@
     <Compile Include="Models\PeriodoVenta.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Politicas.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Promociones.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -313,6 +321,9 @@
     <Compile Include="Models\VentasXFuncion.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ZonaEvento.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -330,7 +341,11 @@
     <Content Include="Images\chino.jpg" />
     <Content Include="Images\destacado.png" />
     <Content Include="Images\destacado2.png" />
+    <Content Include="Images\destacadoEvento_10259_I.jpg" />
+    <Content Include="Images\destacadopost-11.jpg" />
     <Content Include="Images\disco.jpg" />
+    <Content Include="Images\Eventos\imagen1.jpg" />
+    <Content Include="Images\Eventos\imagen2.jpg" />
     <Content Include="Images\fiesta.jpg" />
     <Content Include="Images\guerrasexos.jpg" />
     <Content Include="Images\icons.png" />
@@ -380,6 +395,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\RegisterEvento\BloqueTiempoVentaHelper.js" />
+    <Content Include="Scripts\RegisterEvento\DatosGeneralesHelper.js" />
+    <Content Include="Scripts\RegisterEvento\FuncionesHelper.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -477,11 +495,15 @@
     <Content Include="Views\Evento\Asientos.cshtml" />
     <Content Include="Views\Evento\BloquesTiempoVenta.cshtml" />
     <Content Include="Views\Evento\Funciones.cshtml" />
-    <Content Include="Views\Evento\FuncionRow.cshtml" />
+    <Content Include="Views\CuentaUsuario\BuscaReserva.cshtml" />
+    <Content Include="Views\CuentaUsuario\MiCuenta.cshtml" />
+    <Content Include="Views\CuentaUsuario\MisCompras.cshtml" />
+    <Content Include="Views\CuentaUsuario\MisReservas.cshtml" />
+    <Content Include="Views\CuentaUsuario\Politicas.cshtml" />
+    <Content Include="Views\Evento\Tarifas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\RegistrarEvento\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
