--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -217,6 +217,8 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\CategoriaModel.cs" />
+    <Compile Include="Models\CancelarModel.cs" />
+    <Compile Include="Models\PostergarModel.cs" />
     <Compile Include="Models\Comentarios.cs" />
     <Compile Include="Models\CuentaUsuario.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -514,6 +516,7 @@
     <Content Include="Views\Evento\ModificarEvento.cshtml">
       <SubType>Code</SubType>
     </Content>
+    <Content Include="Views\Evento\CancelarEvento.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
