--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -532,6 +532,7 @@
     <Content Include="Views\Evento\ModificarEvento.cshtml" />
     <Content Include="Views\Categoria\_ViewIna.cshtml" />
     <Content Include="Views\Evento\CancelarEvento.cshtml" />
+    <Content Include="Views\Evento\Cancelar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
