--- a/WebApplication4/WebApplication4/Log4Net.config
+++ b/WebApplication4/WebApplication4/Log4Net.config
@@ -10,7 +10,7 @@
       <appender-ref ref="LogFileAppender"/>
     </root>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="F:\\Logs.txt"/>
+      <param name="File" value="..\Logs\\Log.txt"/>
       <param name="AppendToFile" value="true"/>
       <rollingStyle value="Size"/>
       <maxSizeRollBackups value="10"/>
